fix: adjust font-size from sizebar on mobile and remove helpers listener from footerPlayer

--- a/src/styles/App.sass
+++ b/src/styles/App.sass
@@ -122,6 +122,10 @@ html, body
 @media ( max-width: 500px)
   .feedcast__sidebar-wrapper
     height: 100vh
+    h5
+      font-size: 20px
+    a
+      font-size: 18px
   .feedcast__sidebar
     top: 0px
     height: 100vh
